force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Commission</label>
    <nameField>
        <displayFormat>C$-{0000}</displayFormat>
        <label>Commission #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>