force-app/main/default/objects/Commission__c/fields/Calculated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Commission__c</fullName>
    <description>= Rep Margin * Split % * Commission %</description>
    <formula>Total_Rep_Margin__c * Commission__c * Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>= Rep Margin * Split % * Commission %</inlineHelpText>
    <label>Calculated Commission $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>