force-app/main/default/objects/Commission__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <inlineHelpText>Enter Commission %</inlineHelpText>
    <label>Commission %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>