force-app/main/default/objects/Commission__c/fields/Paid_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Paid_Commissions__c</fullName>
    <label>Paid Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>