force-app/main/default/objects/Commission__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter Sales Person</description>
    <inlineHelpText>Enter Sales Person</inlineHelpText>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>