force-app/main/default/objects/Commission__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <description>Enter Split %</description>
    <inlineHelpText>Enter Split %</inlineHelpText>
    <label>Split %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>