force-app/main/default/objects/Commission__c/fields/Total_Rep_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Rep_Margin__c</fullName>
    <formula>Deal__r.TSGCFG__Quote__r.TSGCFG__Total_Rep_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rep Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>